--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -174,7 +174,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/_45sdp"
                 android:layout_marginTop="@dimen/_10sdp"
-                android:background="@color/signin_bg"
+                android:background="@color/signinbg"
                 android:gravity="center_vertical">
 
                 <LinearLayout
@@ -241,7 +241,7 @@
                         android:background="@android:color/transparent"
                         android:gravity="center|left"
                         android:text="@string/login_here"
-                        android:textColor="@color/signin_bg"
+                        android:textColor="@color/signinbg"
                         android:textSize="@dimen/_12sdp" />
 
                 </LinearLayout>
