--- a/app/src/main/res/layout/linear_progress.xml
+++ b/app/src/main/res/layout/linear_progress.xml
@@ -2,8 +2,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/linear_progress_relative"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="@color/colorAccent"
+    android:layout_height="match_parent"
+    android:background="@color/yesno"
     android:orientation="vertical">
 
     <TextView
@@ -13,5 +13,7 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
-        android:text="TextView" />
+        android:text="test"
+        android:textColor="@color/white"
+        android:textSize="@dimen/_12sdp" />
 </RelativeLayout>
