--- a/app/src/main/res/layout/test.xml
+++ b/app/src/main/res/layout/test.xml
@@ -212,7 +212,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:background="@color/signin_bg"
+                android:background="@color/signinbg"
                 android:padding="@dimen/_5sdp">
 
                 <LinearLayout
