--- a/app/src/main/res/layout/linear_remaining.xml
+++ b/app/src/main/res/layout/linear_remaining.xml
@@ -2,8 +2,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/linear_remaining_relative"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="@color/colorPrimary"
+    android:layout_height="match_parent"
+    android:background="@color/gray"
     android:orientation="vertical">
 
 
@@ -14,5 +14,5 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:text="test" />
+        android:text="" />
 </RelativeLayout>
