--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,20 +5,21 @@
     android:orientation="vertical">
 
     <RelativeLayout
-        android:id="@+id/headerview"
+        android:id="@+id/mainview"
         android:layout_width="match_parent"
         android:layout_height="@dimen/_40sdp"
         android:layout_gravity="top"
+        android:layout_alignParentTop="true"
         android:gravity="top">
 
-        <include layout="@layout/toolbar_layout" />
+        <include layout="@layout/toolbar_layout_option" />
     </RelativeLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_above="@+id/footerview"
-        android:layout_below="@+id/headerview"
+        android:layout_below="@+id/mainview"
         android:orientation="vertical">
 
         <FrameLayout
@@ -36,8 +37,7 @@
         android:layout_alignParentBottom="true"
         android:layout_gravity="bottom"
         android:gravity="bottom">
-
-        <include layout="@layout/footer"></include>
+        <include layout="@layout/footer"/>
     </RelativeLayout>
 
 </RelativeLayout>
