--- a/app/src/main/res/layout/adapter_inboxuser_list.xml
+++ b/app/src/main/res/layout/adapter_inboxuser_list.xml
@@ -50,15 +50,14 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:gravity="center"
+                android:gravity="center|left"
                 android:orientation="horizontal"
-                android:weightSum="2">
+                >
 
                 <TextView
                     android:id="@+id/adapter_inboxuser_list_txtmessage"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="@dimen/_15sdp"
                     android:gravity="center|left"
                     android:text="hi how are you "
                     android:textColor="@color/logintext"
@@ -66,11 +65,11 @@
 
                 <TextView
                     android:id="@+id/adapter_inboxuser_list_txtmessagetime"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="@dimen/_15sdp"
                     android:gravity="center|left"
-                    android:text=" "
+                    android:text="1 mint ago"
+                    android:layout_marginLeft="@dimen/_5sdp"
                     android:textColor="@color/logintext"
                     android:textSize="@dimen/_8sdp" />
             </LinearLayout>
