--- a/app/src/main/res/layout/adapter_people_list.xml
+++ b/app/src/main/res/layout/adapter_people_list.xml
@@ -10,25 +10,26 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:weightSum="2">
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/_70sdp"
-        android:layout_gravity="center"
-        android:layout_margin="@dimen/_5sdp"
-        android:gravity="center"
-        android:layout_weight="1"
-        android:orientation="horizontal"
-        android:weightSum="2">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="@dimen/_70sdp"
             android:layout_gravity="center"
-            android:layout_weight="1.5"
+            android:layout_margin="@dimen/_5sdp"
+            android:layout_weight="1"
             android:gravity="center"
-            android:orientation="vertical">
+            android:orientation="horizontal"
+            android:weightSum="2">
 
-            <!--<de.hdodenhof.circleimageview.CircleImageView
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:layout_weight="1.5"
+                android:gravity="center"
+                android:orientation="vertical">
+
+                <!--<de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/adapter_people_list_imgprofilepi"
                 android:layout_width="80dp"
                 android:layout_height="80dp"
@@ -37,52 +38,53 @@
                 android:padding="@dimen/_10sdp"
                 android:visibility="gone"
                 android:src="@drawable/ic_placeholder" />-->
-            <LinearLayout
-                android:layout_width="@dimen/_70sdp"
-                android:layout_height="@dimen/_70sdp"
-                android:layout_marginLeft="@dimen/_5sdp"
-                android:background="@drawable/ic_profileiconsmall_bg"
-                android:orientation="vertical">
+                <LinearLayout
+                    android:layout_width="@dimen/_70sdp"
+                    android:layout_height="@dimen/_70sdp"
+                    android:layout_marginLeft="@dimen/_5sdp"
+                    android:background="@drawable/ic_profileiconsmall_bg"
+                    android:orientation="vertical">
 
-                <ImageView
-                    android:id="@+id/adapter_people_list_imgprofilepic"
-                    android:layout_width="@dimen/_65sdp"
-                    android:layout_height="@dimen/_42sdp"
-                    android:layout_marginLeft="@dimen/_10sdp"
-                    android:layout_marginTop="@dimen/_25sdp"
-                    android:src="@drawable/ic_placeholder" />
+                    <ImageView
+                        android:id="@+id/adapter_people_list_imgprofilepic"
+                        android:layout_width="@dimen/_65sdp"
+                        android:layout_height="@dimen/_42sdp"
+                        android:layout_marginLeft="@dimen/_10sdp"
+                        android:layout_marginTop="@dimen/_25sdp"
+                        android:src="@drawable/ic_placeholder" />
+                </LinearLayout>
             </LinearLayout>
-        </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/_10sdp"
-            android:layout_weight="0.5"
-            android:orientation="vertical"
-            android:weightSum="2">
-
-            <TextView
-                android:id="@+id/adapter_people_list_txtusername"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:text="@string/username"
-                android:textColor="@color/black"
-                android:textSize="@dimen/_12sdp"
-                android:textStyle="bold" />
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/_10sdp"
+                android:layout_weight="0.5"
+                android:orientation="vertical"
+                android:weightSum="2">
 
-            <TextView
-                android:id="@+id/adapter_people_list_txtfullname"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:text="@string/fullname"
-                android:textColor="@color/black"
-                android:textSize="@dimen/_12sdp" />
+                <TextView
+                    android:id="@+id/adapter_people_list_txtusername"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
+                    android:text=""
+                    android:textColor="@color/black"
+                    android:textSize="@dimen/_12sdp"
+                    android:textStyle="bold" />
 
-        </LinearLayout>
-        </LinearLayout>
+                <TextView
+                    android:id="@+id/adapter_people_list_txtfullname"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
+                    android:text=""
+                    android:textColor="@color/black"
+                    android:textSize="@dimen/_12sdp" />
+
+            </LinearLayout>
+            </LinearLayout>
+
         <View
             android:layout_width="match_parent"
             android:layout_height="@dimen/_1sdp"
