--- a/app/src/main/res/layout/adapter_senderview.xml
+++ b/app/src/main/res/layout/adapter_senderview.xml
@@ -18,4 +18,14 @@
         android:textColor="@color/black"
         android:textSize="@dimen/_13sdp" />
 
+    <ImageView
+        android:id="@+id/adapter_sendview_image"
+        android:layout_width="@dimen/_200sdp"
+        android:layout_height="@dimen/_200sdp"
+        android:gravity="right|center"
+        android:src="@drawable/ic_placeholder"
+        android:layout_marginTop="@dimen/_5sdp"
+        android:layout_gravity="right"
+        />
+
 </LinearLayout>
