--- a/app/src/main/res/layout/activity_ask_quetion.xml
+++ b/app/src/main/res/layout/activity_ask_quetion.xml
@@ -214,55 +214,28 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/_5sdp"
-                    android:orientation="vertical"
-                    android:weightSum="2">
+                    android:orientation="horizontal"
+                    android:gravity="center"
+                   >
 
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center|left"
-                        android:layout_weight="1"
-                        android:gravity="center|left"
-                        android:text="@string/file"
-                        android:textSize="@dimen/_13sdp" />
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="@dimen/_5sdp"
-                        android:orientation="horizontal"
-                        android:weightSum="3">
-
-                        <TextView
-                            android:id="@+id/activity_ask_question_txtfilepath"
-                            android:layout_width="match_parent"
-                            android:layout_height="@dimen/_40sdp"
-                            android:layout_gravity="center"
-                            android:layout_weight="0.4"
-                            android:background="@drawable/loginborder"
-                            android:gravity="center|left"
-                            android:text="@string/uploadfile"
-                            android:clickable="false"
-                            android:paddingLeft="@dimen/_5sdp"
-                            android:textSize="@dimen/_9sdp" />
 
                         <ImageView
                             android:id="@+id/activity_ask_question_btncamera"
-                            android:layout_width="match_parent"
+                            android:layout_width="@dimen/_40sdp"
                             android:layout_height="match_parent"
-                            android:layout_weight="1.3"
                             android:src="@mipmap/ic_camera"
                             android:padding="@dimen/_8sdp"
+                            android:layout_gravity="center"
                             android:layout_marginLeft="@dimen/_2sdp"
                             android:background="@drawable/roundborder_bluebg"
                             />
 
                         <ImageView
                             android:id="@+id/activity_ask_question_btnvideo"
-                            android:layout_width="match_parent"
+                            android:layout_width="@dimen/_40sdp"
                             android:layout_height="match_parent"
-                            android:layout_weight="1.3"
                             android:padding="@dimen/_9sdp"
+                            android:layout_gravity="center"
                             android:layout_marginLeft="@dimen/_2sdp"
                             android:src="@mipmap/ic_video"
                             android:background="@drawable/roundborder_bluebg"
@@ -272,7 +245,6 @@
                             android:layout_height="match_parent"
                             android:layout_width="match_parent" />
 -->
-                                          </LinearLayout>
                 </LinearLayout>
             </LinearLayout>
 
@@ -331,7 +303,9 @@
                         android:layout_height="@dimen/_40sdp"
                         android:layout_marginLeft="@dimen/_10sdp"
                         android:background="@drawable/loginborder"
-                        android:entries="@array/time"/>
+                        android:entries="@array/time"
+                        />
+
                 </LinearLayout>
             </LinearLayout>
 
