--- a/app/src/main/res/layout/test.xml
+++ b/app/src/main/res/layout/test.xml
@@ -318,6 +318,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:orientation="vertical">
+
    <LinearLayout
     android:id="@+id/adapter_home_list_layoutvoteresult1"
     android:layout_width="match_parent"
@@ -371,7 +372,7 @@
                    android:layout_marginLeft="@dimen/_15sdp"
                    android:gravity="center|left"
                    android:text="@string/option1"
-                   android:textColor="@color/black"
+                   android:textColor="@color/logintext"
                    android:textSize="@dimen/_10sdp" />
 
            </RelativeLayout>
@@ -459,7 +460,7 @@
                 android:layout_marginLeft="@dimen/_15sdp"
                 android:gravity="center|left"
                 android:text="@string/option2"
-                android:textColor="@color/black"
+                android:textColor="@color/logintext"
                 android:textSize="@dimen/_10sdp"  />
 
         </RelativeLayout>
@@ -550,7 +551,7 @@
                                 android:layout_marginLeft="@dimen/_15sdp"
                                 android:gravity="center|left"
                                 android:text="@string/option3"
-                                android:textColor="@color/black"
+                                android:textColor="@color/logintext"
                                 android:textSize="@dimen/_10sdp"  />
 
                         </RelativeLayout>
@@ -609,6 +610,7 @@
                             android:layout_weight="0.3"
                             android:layout_margin="@dimen/_3sdp"
                             android:layout_height="match_parent">
+
                             <LinearLayout
                                 android:id="@+id/adapter_home_list_progressbar4_linear"
                                 android:layout_width="match_parent"
@@ -640,7 +642,7 @@
                                 android:layout_marginLeft="@dimen/_15sdp"
                                 android:gravity="center|left"
                                 android:text="@string/option4"
-                                android:textColor="@color/black"
+                                android:textColor="@color/logintext"
                                 android:textSize="@dimen/_10sdp"  />
 
                         </RelativeLayout>
@@ -900,27 +902,36 @@
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="@dimen/_25sdp"
                     android:layout_marginTop="@dimen/_1sdp"
                     android:orientation="horizontal"
                     android:weightSum="2">
 
-                    <!--<com.example.raviarchi.multiplespinner.MultiSelectionSpinner
-                         android:id="@+id/adapter_home_list_spinnerFollowing"
-                         android:layout_width="wrap_content"
-                         android:layout_height="wrap_content"
-                         android:layout_weight="1.5" />
+                    <com.example.raviarchi.multiplespinner.MultiSelectionSpinner
+                        android:id="@+id/adapter_home_list_spinnerFollowing"
+                        android:layout_width="match_parent"
+                        android:layout_marginLeft="@dimen/_5sdp"
+                        android:layout_marginTop="@dimen/_1sdp"
+                        android:background="@drawable/loginborder"
+                        android:layout_height="match_parent"
+                        android:layout_weight="0.5"
+                        android:textColor="@color/logintext"
+                        android:textColorHint="@color/logintext"/>
 
-                     <Button
-                         android:layout_width="wrap_content"
-                         android:layout_height="match_parent"
-                         android:layout_gravity="center"
-                         android:layout_weight="0.5"
-                         android:background="@color/blue"
-                         android:gravity="center"
-                         android:text="share"
-                         android:textColor="@color/white"
-                         android:textSize="@dimen/_11sdp" />-->
+                    <Button
+                        android:id="@+id/adapter_home_list_btnshare"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_gravity="center"
+                        android:layout_marginLeft="@dimen/_5sdp"
+                        android:layout_marginRight="@dimen/_5sdp"
+                        android:layout_weight="1.5"
+                        android:background="@drawable/share_bg"
+                        android:gravity="center"
+                        android:text="share"
+                        android:textAllCaps="false"
+                        android:textColor="@color/white"
+                        android:textSize="@dimen/_11sdp" />
                 </LinearLayout>
 
                 <LinearLayout
