--- a/app/src/main/res/menu/userprofilemenu.xml
+++ b/app/src/main/res/menu/userprofilemenu.xml
@@ -6,6 +6,10 @@
         android:title="User Profile"/>
 
     <item
+        android:id="@+id/menu_item_blockeduser"
+        android:title="Blocked Users"/>
+
+    <item
         android:id="@+id/menu_item_logout"
         android:title="Log out" />
 
