--- a/app/src/main/res/layout/adapter_receiverview.xml
+++ b/app/src/main/res/layout/adapter_receiverview.xml
@@ -23,6 +23,7 @@
         android:layout_width="@dimen/_200sdp"
         android:layout_height="@dimen/_200sdp"
         android:gravity="left|center"
+        android:background="@android:color/transparent"
         android:layout_marginTop="@dimen/_5sdp"
         android:src="@drawable/ic_placeholder"
         android:layout_gravity="left"
