--- a/app/src/main/res/layout/fragment_inboxuser.xml
+++ b/app/src/main/res/layout/fragment_inboxuser.xml
@@ -12,13 +12,25 @@
         <RelativeLayout
             android:id="@+id/headerview"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/_40sdp"
-            >
-            <include layout="@layout/header_layout"/>
-            </RelativeLayout>
+            android:layout_height="@dimen/_40sdp">
+
+            <include layout="@layout/header_layout" />
+        </RelativeLayout>
+
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
+
+            <TextView
+                android:id="@+id/fragment_inboxuser_txtnochat"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:visibility="gone"
+                android:layout_margin="@dimen/_5sdp"
+                android:layout_centerInParent="true"
+                android:text="@string/nochat"
+                android:textSize="@dimen/_13sdp" />
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/fragment_inboxuser_recycler_inboxuserlist"
